<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NAO Communicator</string>
    <string name="menu_title">Menu</string>
    <string name="menu_open">Open menu</string>
    <string name="menu_close">Close menu</string>
    <string name="title_activity_install">Communication Server Installation</string>
    <string name="settings">Settings</string>
    <string name="title_offline">[offline] NAO-Commuicator</string>
    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnExit">Exit</string>
    <string name="btnRefresh">Refresh</string>
    <string name="net_host">Host:</string>
    <string name="net_add_device">Add device</string>
    <string name="net_devices">Available NAOs:</string>
    <string name="net_scan_devices">Scan for devices</string>
    <string name="net_ssid">SSID:</string>
    <string name="net_wpa_key">WPA2 Key:</string>
    <string name="net_hotspot">Hotspot</string>
    <string name="net_ssid_default">NAONETWORK</string>
    <string name="net_wpa_key_default">nao</string>
    <string name="net_hotspot_enabled">Hotspot enabled</string>
    <string name="net_hotspot_disabled">Hotspot disabled</string>
    <string name="net_hotspot_enabled_failed">Failed to enable hotspot</string>
    <string name="net_hotspot__disabled_failed">Failed to disable hotspot</string>
    <string name="net_hotspot_enable_success">Enabling hotspot</string>
    <string name="net_hotspot_disable_success">Disabling hotspot</string>
    <string name="net_unknown_device">Unknown device</string>
    <string name="net_unknown_host">Unknown host</string>
    <string name="net_connection_failed">Establishing connection failed.</string>
    <string name="net_ssh_failed">Failed to execute SSH command.</string>
    <string name="net_try_server_start">Trying to start remote server (~5sec.).</string>
    <string name="net_connected">Connected</string>
    <string name="net_disconnected">Disconnected</string>
    <string name="net_restart_network_service">Restarting service &#8230;</string>
    <string name="net_naoqi">NAOqi</string>
    <string name="net_ssh">SSH</string>
    <string name="net_sftp">SFTP</string>
    <string name="net_login_data_title">NAO Login data.</string>
    <string name="net_login_data_header">Enter NAOs login data.</string>
    <string name="net_user">User:</string>
    <string name="net_password">Password:</string>
    <string name="net_sftp_failed">File upload failed.</string>
    <string name="net_sftp_success">File uploaded.</string>
    <string name="speech_input">Text to say:</string>
    <string name="speech_rate">Speech rate:</string>
    <string name="speech_modulation">Speech modulation:</string>
    <string name="speech_volume">Speech volume:</string>
    <string name="speech_automatic">automatic speech</string>
    <string name="speech_history">History:</string>
    <string name="speech_say">Say Text</string>
    <string name="speech_save">Save Text</string>
    <string name="speech_remove_item">Remove item</string>
    <string name="speech_language">Language:</string>
    <string name="speech_voice">Voice:</string>
    <string name="status_nao_name">NAO</string>
    <string name="status_battery_state_img_Description">bat state</string>
    <string name="status_change_name">Change NAOs name</string>
    <string name="status_change_name_msg">Enter new name for NAO (needs NAO restart):</string>
    <string name="status_volume">System Volume</string>
    <string name="status_system_volume">System Volume: </string>
    <string name="status_player_volume">Player Volume: </string>
    <string name="joints_control_header">Stiffness control</string>
    <string name="joints_control_lhand">Left hand</string>
    <string name="joints_control_lhand_open">Open left hand</string>
    <string name="joints_control_lhand_close">Close left hand</string>
    <string name="joints_control_rhand">Right hand</string>
    <string name="joints_control_rhand_open">Open right hand</string>
    <string name="joints_control_rhand_close">Close right hand</string>
    <string name="joints_img_description">stiffness</string>
    <string name="autonomous_life">Autonomous life state: </string>
    <string name="img_description">image</string>
    <string name="led_happy">Happy</string>
    <string name="led_angry">Angry</string>
    <string name="led_laugh">Laugh</string>
    <string name="led_cautious">Cautious</string>
    <string name="led_thinking">Thinking</string>
    <string name="led_mischievous">Mischievous</string>
    <string name="led_disco">Disco</string>
    <string name="led_blink">Blink</string>
    <string name="led_circle_eyes">Circle Eyes</string>
    <string name="led_flash">Flash</string>
    <string name="led_repeat">Repeat led animation</string>
    <string name="led_left_eye">Left eye</string>
    <string name="led_right_eye">Right eye</string>
    <string name="functions_basic">Basic functions</string>
    <string name="functions_basic_hello">Hello</string>
    <string name="functions_basic_stand_up">Stand up</string>
    <string name="functions_basic_sit_down">Sit down</string>
    <string name="functions_basic_wipe_forehead">Wipe forehead</string>
    <string name="functions_basic_shake_hands">Shake hands</string>
    <string name="functions_tracker">Tracker functions</string>
    <string name="functions_tracker_face">Face tracker</string>
    <string name="functions_tracker_red_ball">Red ball tracker</string>
    <string name="functions_dance">Dances</string>
    <string name="functions_dance_thai_chi">Thai Chi</string>
    <string name="functions_dance_gangnam_style">Gangnam Style</string>
    <string name="functions_dance_evolution_of_dance">Evol. of Dance</string>
    <string name="functions_dance_caravan_palace">Caranvan Palace</string>
    <string name="functions_dance_vangelis_dance">Vangelis Dance</string>
    <string name="functions_dance_eye_of_the_tiger">Eye of the tiger</string>
    <string name="functions_custom">Custom functions</string>
    <string name="functions_custom_new">New custom event</string>
    <string name="functions_custom_almemory_key">ALMemory Key:</string>
    <string name="functions_custom_event_name">Event name:</string>
    <string name="functions_custom_add">Add new event</string>
    <string name="functions_abort">Abort</string>
    <string name="programming_hint">Tap on icon to add block to program</string>
    <string name="programming_playing">playing</string>
    <string name="programming_stopped">stopped</string>
    <string name="programming_SayText">Say</string>
    <string name="programming_ChangeLanguage">Language</string>
    <string name="programming_PlaySound">Play</string>
    <string name="programming_Wait">Wait</string>
    <string name="programming_StandUp">Stand up</string>
    <string name="programming_SitDown">Sit down</string>
    <string name="programming_LedEyes">Eye LEDs</string>
    <string name="programming_Hello">Hello</string>
    <string name="programming_WalkTo">Walk to</string>
    <string name="programming_Stiffness">Stiffness</string>
    <string name="programming_sensor">Sensor</string>
    <string name="settings_play_upload">Upload sound file</string>
    <string name="settings_play_available_files">Available sound files:</string>
    <string name="settings_wait_time">Time to wait [s]:</string>
    <string name="settings_wait_time_default">0.1</string>
    <string name="settings_posture_select">Select posture:</string>
    <string name="settings_led_eye_color_select">Select eye led color:</string>
    <string name="settings_walk_to">Select target to walk to:</string>
    <string name="settings_walk_to_x">Distance X [m]:</string>
    <string name="settings_walk_to_y">Distance Y [m]:</string>
    <string name="settings_walk_to_theta">Turn [deg]:</string>
    <string name="settings_walk_to_arms_enabled">Arms enabled</string>
    <string name="settings_walk_to_default_meter">0.2</string>
    <string name="settings_walk_to_default_degree">15.0</string>
    <string name="settings_stiffness">Select joint(s):</string>
    <string name="settings_stiffness_on">Motor on</string>
    <string name="settings_stiffness_off">Motor off</string>
    <string name="settings_sensor_type">Select sensor type:</string>
    <string name="settings_sensor_value">Select sensor value to wait for:</string>
    <string name="settings_say_default_text">Hello I am NAO.</string>
    <string name="installer_title">Server Installation</string>
    <string name="installer_title_update">Server Update</string>
    <string name="installer_install">Install</string>
    <string name="installer_update">Update</string>
    <string name="installer_device">Device:</string>
    <string name="installer_software_version">Server Version:</string>
    <string name="installer_prerelease">Pre-release</string>
    <string name="installer_description">Description:</string>
    <string name="installer_status_downloading">Downloading server files &#8230;</string>
    <string name="installer_status_extracting">Extracting files &#8230;</string>
    <string name="installer_status_file_right">Settings file rights &#8230;</string>
    <string name="installer_status_update_revision">Updating revision &#8230;</string>
    <string name="installer_status_deleting_files">Deleting files &#8230;</string>
    <string name="installer_status_restart">Restarting server &#8230;</string>
    <string name="installer_status_update_done">Update done.</string>
    <string name="installer_status_install_done">Server installed.</string>
    <string name="installer_status_update_failed">Update failed.</string>
    <string name="installer_status_install_failed">Installation failed.</string>
    <string name="remote_device_reboot">Reboot NAO</string>
    <string name="remote_device_shutdown">Shutdown NAO</string>
    <string name="remote_device_server_install">Install server</string>
    <string name="remote_device_server_update">Update server</string>
    <string name="title_activity_naocom_installer">NAOComInstaller</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>