<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:padding="@dimen/padding"
    android:rowCount="4" >

    <TextView
        android:id="@+id/txtDevicename"
        style="@style/Text"
        android:layout_column="0"
        android:layout_gravity="end|center"
        android:layout_row="0"
        android:text="@string/net_ssid" />

    <EditText
        android:id="@+id/txtSSID"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:ems="10"
        android:inputType="text"
        android:text="@string/net_ssid_default" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtWPAKey"
        android:layout_column="1"
        android:layout_gravity="start|top"
        android:layout_row="1"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:text="@string/net_wpa_key_default" />

    <TextView
        android:id="@+id/lblJointHead"
        style="@style/Text"
        android:layout_column="0"
        android:layout_gravity="end|center"
        android:layout_row="1"
        android:text="@string/net_wpa_key" />

    <Switch
        android:id="@+id/swHotspot"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding"
        android:layout_row="2"
        android:text="@string/net_hotspot" />

    <TextView
        android:id="@+id/lblHotspotStatus"
        style="@style/Text"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="start"
        android:layout_row="3"
        android:text="@string/net_hotspot_disabled"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</GridLayout>