<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        style="@style/ItemTitle"
        android:text="@string/settings_walk_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/Text"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/settings_walk_to_x"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtSettingsWalkToX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:text="@string/settings_walk_to_default_meter" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/Text"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/settings_walk_to_y"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtSettingsWalkToY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:text="@string/settings_walk_to_default_meter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/Text"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/settings_walk_to_theta"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtSettingsWalkToTheta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:text="@string/settings_walk_to_default_degree" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/chkSettingsWalkToArmsEnabled"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/settings_walk_to_arms_enabled" />

</LinearLayout>