<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeSpeech"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding" >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtFunctionsBasicTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightblue"
                android:gravity="center"
                android:padding="@dimen/padding_text_title"
                android:text="@string/functions_basic" />

            <LinearLayout
                android:id="@+id/divFunctionsBasic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnFunctionStandUp"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/functions_basic_stand_up" />

                    <Button
                        android:id="@+id/btnFuntctionSitDown"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/functions_basic_sit_down" />
                </LinearLayout>

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnFunctionHello"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/functions_basic_hello" />

                    <Button
                        android:id="@+id/btnFunctionShakeHands"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/functions_basic_shake_hands" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtFunctionsTrackerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightblue"
                android:gravity="center"
                android:padding="@dimen/padding_text_title"
                android:text="@string/functions_tracker" />

            <LinearLayout
                android:id="@+id/divFunctionsTracker"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnFunctionsFaceTracker"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/functions_tracker_face" />

                <Button
                    android:id="@+id/btnFunctionsRedBallTracker"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/functions_tracker_red_ball" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtFunctionsDanceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightblue"
                android:gravity="center"
                android:padding="@dimen/padding_text_title"
                android:text="@string/functions_dance" />

            <LinearLayout
                android:id="@+id/divFunctionsDance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnDanceThaiChi"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/functions_dance_thai_chi" />

                    <Button
                        android:id="@+id/btnDanceEvolutionOfDance"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/functions_dance_evolution_of_dance" />
                </LinearLayout>

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnDanceCaravanPalace"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/functions_dance_caravan_palace" />

                    <Button
                        android:id="@+id/btnDanceVangelisDance"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/functions_dance_vangelis_dance" />
                </LinearLayout>

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnDanceGangnameStyle"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/functions_dance_gangnam_style" />

                    <Button
                        android:id="@+id/btnDanceEyeOfTheTiger"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/functions_dance_eye_of_the_tiger" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtFunctionsCustomNewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightblue"
                android:gravity="center"
                android:padding="@dimen/padding_text_title"
                android:text="@string/functions_custom_new" />

            <LinearLayout
                android:id="@+id/divFunctionsCustomNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/lblFunctionsCustomNew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/functions_custom_almemory_key" />

                    <EditText
                        android:id="@+id/txtFunctionsCustomNewALMemoryKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/lblFunctionsCustomNewName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/functions_custom_new" />

                    <EditText
                        android:id="@+id/txtFunctionsCustomNewName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnFunctionsCustomNewAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/functions_custom_add" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtFunctionsCustomTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightblue"
                android:gravity="center"
                android:padding="@dimen/padding_text_title"
                android:text="@string/functions_custom" />

            <LinearLayout
                android:id="@+id/divFunctionsCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>